# SOPBench

./: .env.example  .gitattributes  .gitignore  LICENSE  README.md  procedural_datasets.jsx  pyproject.toml
docs/: CLAUDE.md  SOPBench_goal.md  exp_log.md
methods/: README.md
results/: README.md
results/captaincook4d/clean-fps1-mmss/: 10_50.json  10_6.json  12_51.json  1_34.json  9_45.json  _summary.json
results/captaincook4d/clean-fps1-mmss-v2/: 10_50.json  10_6.json  12_51.json  1_34.json  9_45.json  _summary.json
results/captaincook4d/clean-fps1-sub/: 10_50.json  10_6.json  12_51.json  1_34.json  9_45.json  _summary.json
results/captaincook4d/clean-fps1-sub-v2/: 10_50.json  10_6.json  12_51.json  1_34.json  9_45.json  _summary.json
results/captaincook4d/clean-fps2-mmss-v2/: 10_50.json  10_6.json  12_51.json  (+3 more)
sopbench/: README.md  frame_extractor.py  metrics.py  run_eval.py  run_experiment.py  visualizer.py
sopbench/ablations/: probe_balanced.py  rerun_top_configs_v2.py  run_noaudio_experiment.py  run_pro_top_configs.py  run_single_step_experiment.py  run_subsec_experiment.py  run_variance_verification.py
sopbench/archive/: README.md  check_audio_tokens.py  gemini_baseline.py  gemini_baseline_frames.py  gemini_baseline_v2.py  probe_video.py  run_eval_frames.py  run_eval_v2.py  run_experiment_old.py  run_fps_experiment.py  run_pro_noaudio.py
videos/: README.md
videos/captaincook4d_samples/: annotations.json
videos/coin_samples/: annotations.json
videos/probe/: ground_truth.json  probe_results.json  probe_v2_results.json  probe_v3_balanced.json
(+320 files in other folders)
